[project]
name = "mysquishy"
version = "0.1.0"
description = "Recompress zarr chunks in-place"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Juan Nunez-Iglesias", email = "jni@fastmail.com" }
]
maintainers = [
  {name = "Juan Nunez-Iglesias", email = "jni@fastmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy",
  "numcodecs",
  "zarr",
  "ome-zarr",
  "dask[array,distributed]",
  "tqdm",
  "toolz",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

# [project.urls]  # Optional
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Reports" = "https://github.com/pypa/sampleproject/issues"
# "Funding" = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"
# "Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]
mysquishy = "mysquishy:main"

# [tool.setuptools]
# package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
